tests/ui/no_tail_default.stderr
error: unexpected end of macro invocation
  --> tests/ui/no_tail_default.rs:11:20
   |
 3 | #[bobtail::bob]
   | --------------- when calling this macro
...
11 |     assert_eq!(f!(1), 1);
   |                    ^ missing tokens in macro arguments
   |
note: while trying to match `,`
  --> tests/ui/no_tail_default.rs:3:1
   |
 3 | #[bobtail::bob]
   | ^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `bobtail::bob` (in Nightly builds, run with -Z macro-backtrace for more info)
